--- a/Assignment 3.html
+++ b/Assignment 3.html
@@ -1,1 +1,54 @@
 
+<!DOCTYPE html>
+<html>
+
+<head>
+<link rel="stylesheet" type="text/css" href="style.css"/>
+<title> Code 1230 week 1 </title>
+</head>
+
+<body style="width:940px;margin:0 auto;text-align:left;">
+<div style="width:940px;margin:0 auto;">
+ <div class="topnav" id="myTopnav">
+ <a href="index.html">Home</a>
+
+ </div>
+
+<h1>Assignment 3</h1>
+Z5027169 Mingshi LIU
+</p>
+ 
+<p>Local education inequities across NSW <br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/final%201.jpg?raw=true" style="width:100%" />
+  
+<p>The issue in NSW<br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/final%202.png?raw=true" style="width:100%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/final%203.jpg?raw=true" style="width:100%" />
+  
+<p>According to the information that we can get from the graph that the high educational level  distribution is not equitable either male or female.<br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/final%204.jpg?raw=true" style="width:100%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/final%205.jpg?raw=true" style="width:100%" />
+  
+<p>Latte line also illustrate the main reason why this phenomenon happened. Not only economic but also development cause educational equities across NSW.   <br><br>
+<p>The solution proposal<br><br>
+  <p>Case study <br><br>
+    <p>Because luddenham is approximately dark on the graph which means the education level is lower than other location in NSW, and the education level need to be improved. Therefore  a university is a proper approach in order to improve the education level and provide more employment opportunities.  <br><br>
+<p>Design proposal  <br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/final%206.jpg?raw=true" style="width:100%" />
+<p>The shape of the university is circle such as a donut. The hole of the donut on the site is the lake. In addition that, the main body of the donut consists of five buildings which have different shape and height. The difference between each building is the shape and height which is subject to illustrate the spatial relationship. The design is from outside to inside, and the center is the lake. Enough space and connection between these buildings provide space to students for conversation and daily activities.  <br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/final%206.jpg?raw=true" style="width:100%" />
+  <p>In 2016 , the education level, a completed master’s degree, has a relationship with site location in NSW. The higher level of education is at the center of CBD, and lower level of education is at the outside of this site. The reason for unequal educational level is unequal educational condition. According to researches, most of universities are located around the center or have a shorter distance to center comparing with villages. In the other hand, 35-44 is the middle age of citizens. They take the main responsibility for the country. Therefore their educational level is vital for investigation and research.<br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/final%207.jpg?raw=true" style="width:100%" />
+<p>Render<br><br>
+  <img src="https://github.com/MingshiLiu9/code1230/blob/master/final%208.png?raw=true" style="width:100%" />
+
+ 
+<p>Design Rhino Model link: https://mingshiliu9.github.io/assignment/<br><br>
+<footer>
+  
+<a href="https://github.com/madeleinejohanson"> Z5027169</a>
+</footer>
+</div>
+</body>
+
+</html>
